--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,6 @@
 			"src/"
 		]
 	},
-	"minimum-stability": "dev",
 	"require": {
 		"php": ">=7.2",
 		"ext-json": "*",
@@ -54,8 +53,7 @@
 		"nette/utils": "^3.2",
 		"nyholm/psr7": "^1.3",
 		"nyholm/psr7-server": "^1.0.0",
-		"php-di/slim-bridge": "^3.0",
-		"roave/security-advisories": "dev-master"
+		"php-di/slim-bridge": "^3.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=8.5.21"
