Common: Experiments with bridge

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
 			"./src/ClanCats/Hydrahon/Query/Sql/Select.php"
 		],
 		"exclude-from-classmap": [
+			"./src/Edde/Bridge/User/User.php",
 			"./vendor/clancats/hydrahon/src/Query/Sql/Select.php"
 		],
 		"classmap": [
