--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,10 @@
 		"nette/utils": "^3.2",
 		"nyholm/psr7": "^1.3",
 		"nyholm/psr7-server": "^1.0.0",
-		"php-di/slim-bridge": "^3.0"
+		"php-di/slim-bridge": "^3.0",
+		"ocramius/proxy-manager": "^2.2.3",
+		"minime/annotations": "dev-master",
+		"kdyby/parse-use-statements": "^0.2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=8.5.21"
