--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,8 @@
 		"nyholm/psr7": "^1.3",
 		"nyholm/psr7-server": "^1.0.0",
 		"php-di/slim-bridge": "^3.0",
+		"minwork/array": "^v1.13.5",
+		"graze/array-merger": "^0.2",
 		"ocramius/proxy-manager": "^2.2.3",
 		"minime/annotations": "dev-master",
 		"kdyby/parse-use-statements": "^0.2.0"
