--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
 		]
 	},
 	"require": {
-		"php": ">=7.2",
+		"php": ">=8.0",
 		"ext-json": "*",
 		"ext-pdo": "*",
 		"ext-zlib": "*",
@@ -46,10 +46,13 @@
 		"robmorgan/phinx": "^0.12",
 		"dibi/dibi": "^4.1",
 		"phpoffice/phpspreadsheet": "^1.16",
+		"nelexa/zip": "^4.0.1",
 		"league/uri": "^6.4",
 		"symfony/process": "^5.2",
 		"diff/diff": "^3.2",
-		"symfony/yaml": "^5.2",
+		"symfony/yaml": "^6.0.0",
+		"nikic/php-parser": "*",
+		"cache/void-adapter": "^1.1",
 		"gabrielelana/byte-units": "^0.5.0",
 		"league/flysystem": "^2.2.3",
 		"clancats/hydrahon": "^1.1",
@@ -59,10 +62,9 @@
 		"nyholm/psr7-server": "^1.0.0",
 		"php-di/slim-bridge": "^3.0",
 		"minwork/array": "^v1.13.5",
-		"graze/array-merger": "^0.2",
-		"ocramius/proxy-manager": "^2.2.3",
 		"minime/annotations": "dev-master",
-		"kdyby/parse-use-statements": "^0.2.0"
+		"kdyby/parse-use-statements": "^v0.2",
+		"ocramius/proxy-manager": "^2.13.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=8.5.21"
