--- a/composer.json
+++ b/composer.json
@@ -61,8 +61,7 @@
 		"minwork/array": "^v1.13.5",
 		"graze/array-merger": "^0.2",
 		"ocramius/proxy-manager": "^2.2.3",
-		"minime/annotations": "dev-master",
-		"kdyby/parse-use-statements": "^0.2.0"
+		"minime/annotations": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=8.5.21"
