--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
 	"config": {
 		"optimize-autoloader": true,
 		"bin-compat": "full",
-		"discard-changes": true
+		"discard-changes": true,
+		"allow-plugins": {
+			"composer/package-versions-deprecated": true
+		}
 	},
 	"autoload": {
 		"files": [
@@ -62,7 +65,7 @@
 		"nyholm/psr7-server": "^1.0.0",
 		"php-di/slim-bridge": "^3.0",
 		"minwork/array": "^v1.13.5",
-		"minime/annotations": "dev-master",
+		"minime/annotations": "^3.1.0",
 		"ocramius/proxy-manager": "^2.13.0"
 	},
 	"require-dev": {
