--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,7 @@
 		"minwork/array": "^v1.13.5",
 		"graze/array-merger": "^0.2",
 		"ocramius/proxy-manager": "^2.2.3",
-		"minime/annotations": "dev-master"
+		"minime/annotations": "^3.1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=8.5.21"
