--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
 		"exclude-from-classmap": [
 			"./src/Edde/Bridge/User/CurrentUser.php",
 			"./src/Edde/Bridge/User/UserDto.php",
+			"./src/Edde/Bridge/User/Repository/UserRepository.php",
 			"./vendor/clancats/hydrahon/src/Query/Sql/Select.php"
 		],
 		"classmap": [
