--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,18 @@
 	"config": {
 		"optimize-autoloader": true,
 		"bin-compat": "full",
-		"discard-changes": true
+		"discard-changes": true,
+		"allow-plugins": {
+			"composer/package-versions-deprecated": true
+		}
 	},
 	"autoload": {
 		"files": [
 			"./src/ClanCats/Hydrahon/Query/Sql/Select.php"
 		],
 		"exclude-from-classmap": [
-			"./src/Edde/Bridge/User/CurrentUser.php",
-			"./src/Edde/Bridge/User/UserDto.php",
+			"./src/Edde/Bridge"
+			/,
 			"./vendor/clancats/hydrahon/src/Query/Sql/Select.php"
 		],
 		"classmap": [
