--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
 			"./src/ClanCats/Hydrahon/Query/Sql/Select.php"
 		],
 		"exclude-from-classmap": [
-			"./src/Edde/Bridge"
-			/,
+			"./src/Edde/Bridge/",
 			"./vendor/clancats/hydrahon/src/Query/Sql/Select.php"
 		],
 		"classmap": [
