--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
 		"robmorgan/phinx": "^0.12",
 		"dibi/dibi": "^4.1",
 		"phpoffice/phpspreadsheet": "^1.16",
+		"nelexa/zip": "^3.3.3",
 		"league/uri": "^6.4",
 		"symfony/process": "^5.2",
 		"diff/diff": "^3.2",
@@ -62,11 +63,10 @@
 		"php-di/slim-bridge": "^3.0",
 		"minwork/array": "^v1.13.5",
 		"graze/array-merger": "^0.2",
-		"ocramius/proxy-manager": "^2.2.3",
 		"minime/annotations": "^3.1.0",
-		"nikic/php-parser": "*",
-		"nelexa/zip": "^3.3.3",
-		"cache/void-adapter": "^1.1"
+		"nikic/php-parser": "v4.13.2",
+		"cache/void-adapter": "^1.1",
+		"ocramius/proxy-manager": "^2.2.3"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=8.5.21"
