--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
 		"php-di/slim-bridge": "^3.0",
 		"minwork/array": "^v1.13.5",
 		"minime/annotations": "^3.1.0",
-		"nikic/php-parser": "v4.13.2",
+		"nikic/php-parser": "*",
 		"cache/void-adapter": "^1.1",
 		"ocramius/proxy-manager": "^2.2.3"
 	},
