--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,8 @@
 		"minime/annotations": "^3.1.0",
 		"nikic/php-parser": "*",
 		"cache/void-adapter": "^1.1",
-		"ocramius/proxy-manager": "^2.2.3"
+		"ocramius/proxy-manager": "^2.2.3",
+		"symfony/cache": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=8.5.21"
