--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,8 @@
 		"nikic/php-parser": "*",
 		"cache/void-adapter": "^1.1",
 		"ocramius/proxy-manager": "^2.2.3",
-		"symfony/cache": "*"
+		"symfony/cache": "*",
+		"nette/safe-stream": "^2.5"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=8.5.21"
