--- a/composer.json
+++ b/composer.json
@@ -35,40 +35,40 @@
 		]
 	},
 	"require": {
-		"php": ">=7.2",
+		"cache/void-adapter": "^1.1",
+		"clancats/hydrahon": "^1.1",
+		"dibi/dibi": "^4.1",
+		"diff/diff": "^3.2",
+		"doctrine/annotations": "^1.12",
 		"ext-json": "*",
 		"ext-pdo": "*",
-		"ext-zlib": "*",
 		"ext-zip": "*",
-		"psr/log": "^1.1",
-		"ramsey/uuid": "^4.1.1",
-		"tracy/tracy": "^v2.8",
-		"symfony/http-foundation": "^v5.4.1",
-		"doctrine/annotations": "^1.12",
-		"robmorgan/phinx": "^0.12",
-		"dibi/dibi": "^4.1",
-		"phpoffice/phpspreadsheet": "^1.16",
-		"nelexa/zip": "^3.3.3 || ^4.0.0",
-		"league/uri": "^6.4",
-		"league/uri-components": "^2.2.1",
-		"symfony/process": "^5.2",
-		"diff/diff": "^3.2",
-		"symfony/yaml": "^5.2",
+		"ext-zlib": "*",
 		"gabrielelana/byte-units": "^0.5.0",
 		"league/flysystem": "^2.2.3",
-		"clancats/hydrahon": "^1.1",
-		"php-di/php-di": "^6.3",
+		"league/uri": "^6.4",
+		"league/uri-components": "^2.2.1",
+		"minime/annotations": "^3.1.0",
+		"minwork/array": "^v1.13.5",
+		"nelexa/zip": "^3.3.3 || ^4.0.0",
+		"nette/safe-stream": "^2.5",
 		"nette/utils": "^3.2",
+		"nikic/php-parser": "*",
 		"nyholm/psr7": "^1.3",
 		"nyholm/psr7-server": "^1.0.0",
-		"php-di/slim-bridge": "^3.0",
-		"minwork/array": "^v1.13.5",
-		"minime/annotations": "^3.1.0",
-		"nikic/php-parser": "*",
-		"cache/void-adapter": "^1.1",
 		"ocramius/proxy-manager": "^2.2.3",
+		"php": ">=7.2",
+		"php-di/php-di": "^6.3",
+		"php-di/slim-bridge": "^3.0",
+		"phpoffice/phpspreadsheet": "^1.16",
+		"psr/log": "^1.1",
+		"ramsey/uuid": "^4.1.1",
+		"robmorgan/phinx": "^0.12",
 		"symfony/cache": "*",
-		"nette/safe-stream": "^2.5"
+		"symfony/http-foundation": "^v5.4.1",
+		"symfony/process": "^5.2",
+		"symfony/yaml": "^5.2",
+		"tracy/tracy": "^v2.8"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=8.5.21"
