--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,8 @@
 		"dibi/dibi": "^4.1",
 		"diff/diff": "^3.2",
 		"doctrine/annotations": "^1.12",
+		"doctrine/dbal": "^3.3",
+		"doctrine/orm": "^2.14",
 		"ext-json": "*",
 		"ext-pdo": "*",
 		"ext-zip": "*",
@@ -57,7 +59,7 @@
 		"nyholm/psr7": "^1.3",
 		"nyholm/psr7-server": "^1.0.0",
 		"ocramius/proxy-manager": "^2.2.3",
-		"php": ">=7.2",
+		"php": ">=7.3",
 		"php-di/php-di": "^6.3",
 		"php-di/slim-bridge": "^3.0",
 		"phpoffice/phpspreadsheet": "^1.16",
@@ -69,8 +71,5 @@
 		"symfony/process": "^5.2",
 		"symfony/yaml": "^5.2",
 		"tracy/tracy": "^v2.8"
-	},
-	"require-dev": {
-		"phpunit/phpunit": ">=8.5.21"
 	}
 }
