Reverted doctrine version

--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,8 @@
 		"dibi/dibi": "^4.1",
 		"diff/diff": "^3.2",
 		"doctrine/annotations": "^1.12",
-		"doctrine/dbal": "3.2.2",
-		"doctrine/orm": "2.10.5",
+		"doctrine/dbal": "^3.3",
+		"doctrine/orm": "^2.14",
 		"ext-json": "*",
 		"ext-pdo": "*",
 		"ext-zip": "*",
