--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
 		"nyholm/psr7": "^1.3",
 		"nyholm/psr7-server": "^1.0.0",
 		"ocramius/proxy-manager": "^2.2.3",
+		"perchten/rmrdir": "1.0.3",
 		"php": ">=7.2.0, <=7.3.33",
 		"php-di/php-di": "^6.3",
 		"php-di/slim-bridge": "^3.0",
