--- a/composer.json
+++ b/composer.json
@@ -69,5 +69,8 @@
 		"symfony/process": "^5.2",
 		"symfony/yaml": "^5.2",
 		"tracy/tracy": "^v2.8"
+	},
+	"require-dev": {
+		"phpstan/phpstan": "1.10.29"
 	}
 }
